[gd_scene load_steps=6 format=3 uid="uid://dksk2mnvv6261"]

[ext_resource type="Script" path="res://scenes/Image.gd" id="1_qxd73"]
[ext_resource type="StyleBox" uid="uid://skvui3iyamgx" path="res://assets/style_box_flat.tres" id="2_6wddg"]
[ext_resource type="Texture2D" uid="uid://dxkit7hnb4uoh" path="res://icon.svg" id="3_hgouh"]
[ext_resource type="Script" path="res://scenes/ReasonsLabel.gd" id="4_8ym5t"]

[sub_resource type="Theme" id="Theme_5u7tv"]
PanelContainer/styles/panel = ExtResource("2_6wddg")

[node name="Image" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -338.0
offset_bottom = -52.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3
script = ExtResource("1_qxd73")

[node name="SelectedBorder" type="PanelContainer" parent="."]
z_index = 1
layout_mode = 2
theme = SubResource("Theme_5u7tv")

[node name="PanelContainer" type="PanelContainer" parent="."]
clip_children = 1
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 72

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="FilenameLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
z_index = 2
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
text = "TEXT"
justification_flags = 160
text_overrun_behavior = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="InfoLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
z_index = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_color = Color(1, 1, 1, 0.741176)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.741176)
theme_override_constants/outline_size = 5
text = "TEXT"
text_overrun_behavior = 3

[node name="ReasonsLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
z_index = 1
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(1, 1, 0, 0.741176)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.741176)
theme_override_constants/outline_size = 5
horizontal_alignment = 2
autowrap_mode = 2
script = ExtResource("4_8ym5t")

[node name="TextureRect" type="TextureRect" parent="."]
clip_contents = true
layout_mode = 2
texture = ExtResource("3_hgouh")
expand_mode = 1
stretch_mode = 5

[node name="Button" type="Button" parent="TextureRect"]
self_modulate = Color(0, 0, 0, 0)
z_index = 10
z_as_relative = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="TextureRect/Button" to="." method="_on_image_button_pressed"]
